--- a/CSS/style.css
+++ b/CSS/style.css
@@ -84,7 +84,7 @@ section p {
 /* Grid activity */
 .activity-grid {
   display: grid;
-  grid-template-columns: minmax(250px, auto);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 30px;
   margin-top: 40px;
 }
