--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@
 :root {
   --primary: #2c3e50;
   --accent: #6c63ff;
-  --gradient-bg: linear-gradient(#6c63ff, #7b68ee, #a067e3);
+  --gradient-bg: linear-gradient(to right, #6c63ff, #7b68ee, #a067e3);
   --text: #333;
 }
 
@@ -126,7 +126,7 @@ footer {
 
 /* Media Queris Mobile */
 @media (max-width: 768px) {
-  h1 {
+  header h1 {
     font-size: 2.2rem;
   }
   
